--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,37 @@
 <STYLE>
 			*{
-		
-				border: 0px solid black;
-		
+				margin: 0px;
+				padding: 0px;
+				}
+			
+			.border {
+				margin-left: 30px;
+				margin-right: 30px;
+				border-bottom: solid 2px #E1DCDC;
+				padding-bottom: 10px;
 			}
+			
+			.fedback {
+				margin-left: 30px;
+				margin-right: 30px;
+			
+				padding-bottom: 10px;				
+			}
+			
+			
+			.wrapper{
+	
+					background: #eee;
+				}
+			
+			body{
+			
+				margin-top: 5px;
+				margin-left: 0px;
+				margin-right: 0px;
+				margin-bottom: 30px;
+				background: #eee;
+				}
 
 			BODY A {
 
@@ -17,40 +45,44 @@
 			A:hover{
 					COLOR: #ff0000;
 					}
+				
+				
+			div a{ 
+				
+				line-height: 10px;
+				height: 70px;
+				font-size: 18px;
+				padding-left: 10px;
 					
-								
-			a { 
-				
-				line-height: 50px; height: 70px; font-size: 18px;
-				
-				}
+			}
 		
-			.wrapper{
-	
-					background: rgba(192, 192, 192, 0.23);
-					
-					}
-			
 			
 			table{
-			
+				
 				background: #ffffff;
-						
+				
+			}	
+				
+			span{
+				padding-left: 10px;
 				}
-		
-			body{
 			
-				margin: 0;
-				
-				}
-				
-				
+			
 			p{
+				padding-left: 10px;
+				padding-right: 0px;
+				margin-top: 15px;
+				margin-bottom: 9px;
+			}
 			
-				}
-		
+			
+			ul {
+				margin-top: 35px;
+				padding-left: 10px;
+				margin-bottom: 5px;
+			}
 			
 			li{
-								
+				margin-left: 25px;	
 				}
 	</STYLE>
